nginx-bluegreen-gcp/gke/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
  namespace: nginx-bg
  labels:
    app: nginx-app
    color: blue
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nginx-app
      color: blue
  template:
    metadata:
      labels:
        app: nginx-app
        color: blue
    spec:
      containers:
      - name: nginx
        image: 2823/nginx-app:v1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
