nginx-bluegreen-gcp/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-bg
spec:
  type: ClusterIP
  selector:
    app: nginx-app
    color: blue
  ports:
  - name: http
    port: 80
    targetPort: 80
