nginx-bluegreen-gcp/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-bg
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "gke-nginx-ip"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: "nginx-cert"
spec:
  rules:
  - host: gke.srini23.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
